WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243966
REGRESSION (
250414@main
): Placeholder text is vertically off center on mail.163.com
https://bugs.webkit.org/show_bug.cgi?id=243966
Summary
REGRESSION (250414@main): Placeholder text is vertically off center on mail.1...
Aditya Keerthi
Reported
2022-08-15 18:19:08 PDT
rdar://96399025
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-08-15 22:43:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3344
EWS
Comment 2
2022-08-16 19:29:30 PDT
Committed
253500@main
(0f760ccf1c9e): <
https://commits.webkit.org/253500@main
> Reviewed commits have been landed. Closing PR #3344 and removing active labels.
Karl Dubost
Comment 3
2022-09-25 20:40:07 PDT
Aditya, This created a regression on
https://www.revaaa.com
See
Bug 245422
Aditya Keerthi
Comment 4
2022-09-26 10:10:43 PDT
(In reply to Karl Dubost from
comment #3
)
> Aditya, > This created a regression on
https://www.revaaa.com
> See
Bug 245422
Thanks for the investigation, I will take a look.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug