REGRESSION (250414@main): Placeholder text is vertically off center on mail.163.com https://bugs.webkit.org/show_bug.cgi?id=243966 rdar://96399025

Reviewed by Ryosuke Niwa.

mail.163.com sets a height and equivalent line-height on `::placeholder`.
Following 250414@main, the line-height property cannot be set by the author,
matching the behavior of other browsers. However, this change exposed a flaw in
the logic that vertically centers `::placeholder`.

As of 222311@main, `::placeholder` is centered using its box's logical height.
However, if the height is larger than the height of content in the first line
box, and the line height does not match the logical height, the placeholder
text will appear vertically off center, even though the box itself is center
aligned.

To fix, use the height of the content in the placeholder's first line box to
determine its position. This approach works as the placeholder in input elements
is restricted to a single line. Additionally, prevent authors from changing the
vertical padding on `::placeholder`. This behavior matches other browsers, and
ensures the line box height approach keeps the placeholder text centered.

* LayoutTests/fast/forms/placeholder-content-center.html:

Augmented an existing reference test to verify that the placeholder text remains
centered when height and vertical padding are specified.

* Source/WebCore/html/shadow/TextControlInnerElements.cpp:
(WebCore::TextControlPlaceholderElement::resolveCustomStyle):
* Source/WebCore/layout/integration/inline/InlineIteratorLineBox.h:
(WebCore::InlineIterator::LineBox::contentLogicalHeight const):
* Source/WebCore/rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):

Canonical link: https://commits.webkit.org/253500@main